Fix radio button spacing issue

--- a/src/components/styles/searchBar.css
+++ b/src/components/styles/searchBar.css
@@ -449,7 +449,7 @@ color: #1E1E1E;
   width: 269px;
   height: 0px;
   right: 22px;
-  top: 36px;
+  top: 0px;
   
   
   /* Inside Auto Layout */
